New in v0.7.12 (2017/01/??)
---------------------------
* Fixed bug #1623342 with patch supplied by Daniel Jakots
  - Failing test on OpenBSD because tar/gtar not found
* Fixed bug #1654220 with patch supplied by Kenneth Newwood
  - Duplicity fails on MacOS because GPG version parsing fails


New in v0.7.11 (2016/12/31)
---------------------------
* Fixed bugs #815510 and #1615480
  - Changed default --volsize to 200MB
* Merged in lp:~mstoll-de/duplicity/duplicity
  - Backblaze announced a new domain for the b2 api
* Merged in lp:~aaron-whitehouse/duplicity/bug_1620085_exclude-if-present-locked-folder
  - Fixes Bug #1620085: --exclude-if-present gives OSError looking for tag in locked folders
* Fixed bug #1623342 with patch from Daniel Jakots
  - failing test on OpenBSD because tar/gtar not found
* Merged in lp:~mwilck/duplicity/duplicity
  - GPG: enable truly non-interactive operation with gpg2
  - This patch fixes the IMO unexpected behavior that, when using GnuPG2, a pass phrase dialog always pops up for
    saving backups. This is particularly annoying when trying to do unattended / fully automatic backups.
* Fixed bug #1621194 with code from Tornhoof
  - Do backup to google drive working without a service account
* Fixed bug #1642098 - does not create PAR2 archives when '--par2-options' is used
  - Missing space between par2-options plus default options
* Fix bug using 40-char sign keys, from Richard McGraw on mail list
  - Remove truncation of argument and adjust comments
* Merged in lp:~dernils/duplicity/robust-dropbox-backend
  - Added new command line option --backend-retry-delay
    that allows to determine the time that duplicity sleeps
    before retrying after an error has occured.
  - Added some robustness to dpbxbackend.py that ensures re-authentication
    happens in case that a socket is changed (e.g. due to a forced reconnect
    of a dynamic internet connection).
* Merged in lp:~ed.so/duplicity/manpage.fixes