@@ -4,6 +4,8 @@ New in v0.7.12 (2017/01/??)
   - Failing test on OpenBSD because tar/gtar not found
 * Fixed bug #1654220 with patch supplied by Kenneth Newwood
   - Duplicity fails on MacOS because GPG version parsing fails
+* Fixed bug #1655268 "--gpg-binary option not working"
+  - If gpg binary is specified rebuild gpg profile using new binary location
 
 
 New in v0.7.11 (2016/12/31)
